@@ -1,6 +1,8 @@
 # Dependencies
 
 OPENJDK_VERSION = b147
+JDK_UPDATE_VERSION = 02
+COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
 CORBA_CHANGESET = 78cd4b4fcb75
 HOTSPOT_CHANGESET = 7bcec32b0c9a
@@ -373,9 +375,6 @@ endif
 if SHARK_BUILD
   ICEDTEA_SHARK_BUILD = true
 endif
-
-JDK_UPDATE_VERSION = $(shell echo $(OPENJDK_VERSION) | sed -e "s/^b//")
-COMBINED_VERSION = $(JDK_UPDATE_VERSION)-$(OPENJDK_VERSION)
 
 ICEDTEA_NAME = IcedTea7
 if HAS_ICEDTEA_REVISION
